fix table format add colmn seperator leading table unalign

--- a/examples/cli/CMakeLists.txt
+++ b/examples/cli/CMakeLists.txt
@@ -29,3 +29,15 @@ set_property(TEST config_app3 PROPERTY PASS_REGULAR_EXPRESSION "file=\"\"")
 
 add_test(NAME config_app4 COMMAND config_app -f "/" -p)
 set_property(TEST config_app4 PROPERTY PASS_REGULAR_EXPRESSION "file=\"/\"")
+
+carbin_cc_binary(
+        NAME positional_arity
+        SOURCES positional_arity.cc
+        COPTS ${USER_CXX_FLAGS}
+)
+
+carbin_cc_binary(
+        NAME positional_vector
+        SOURCES positional_vector.cc
+        COPTS ${USER_CXX_FLAGS}
+)
