--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -20,7 +20,7 @@ source:
   git_url: ../
 
 outputs:
-  - name: turbo
+  - name: collie
     script: bld.sh   # [not win]
     script: bld.bat  # [win]
     build:
