--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -38,6 +38,6 @@ outputs:
       run:
     test:
       commands:
-        - test -f $PREFIX/include/version.h              # [linux]
+        - test -f $PREFIX/include/collie/version.h              # [linux]
       #  - conda inspect linkages -p $PREFIX $PKG_NAME  # [not win]
       #  - conda inspect objects -p $PREFIX $PKG_NAME   # [osx]
