fixing install headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,11 +89,14 @@ endif ()
 ##############################################
 # header installing
 #############################################
+
 install(DIRECTORY ${PROJECT_NAME}
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
         FILES_MATCHING
         PATTERN "*.inc"
         PATTERN "*.h"
+        PATTERN "*.hpp"
+        PATTERN "*.inl"
         )
 
 # Layout. This works for all platforms:
