--- a/tests/strings/CMakeLists.txt
+++ b/tests/strings/CMakeLists.txt
@@ -18,24 +18,28 @@ find_package(Threads REQUIRED)
 
 carbin_cc_test(
         NAME inlined_string_test
+        MODULE base
         SOURCES inlined_string_test.cc
         CXXOPTS ${USER_CXX_FLAGS}
 )
 
 carbin_cc_test(
         NAME case_conv_test
+        MODULE base
         SOURCES case_conv_test.cc
         CXXOPTS ${USER_CXX_FLAGS}
 )
 
 carbin_cc_test(
         NAME replace_test
+        MODULE base
         SOURCES replace_test.cc
         CXXOPTS ${USER_CXX_FLAGS}
 )
 
 carbin_cc_test(
         NAME trim_test
+        MODULE base
         SOURCES trim_test.cc
         CXXOPTS ${USER_CXX_FLAGS}
 )
