--- a/conda/environment_linux.yaml
+++ b/conda/environment_linux.yaml
@@ -1,12 +1,12 @@
-name: collie-dev
+name: changeme-dev
 channels:
   - conda-forge
   - defaults
-  - ea-group
+  - titan-search
 dependencies:
-  - gcc
-  - gxx
-  - sysroot_linux-64 >=2.17 # [linux]
+  - gcc =8.5 # [linux]
+  - gxx =8.5 # [linux]
+  - sysroot_linux-64=2.17 # [linux]
   - gtest
   - gmock
   - benchmark
