--- a/conda/environment_osx.yaml
+++ b/conda/environment_osx.yaml
@@ -1,9 +1,12 @@
-name: collie-dev
+name:  solo-dev
 channels:
   - conda-forge
   - defaults
-  - ea-group
+  - flare-rpc
 dependencies:
-  - gtest
-  - gmock
-  - benchmark
+  - clang # [osx]
+  - clangxx #   [osx]
+  - libfaiss
+  - libflare
+  - gtest =1.11.0
+  - gmock =1.11.0
