fix .hpp uninstaled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ install(DIRECTORY ${PROJECT_NAME}
         FILES_MATCHING
         PATTERN "*.inc"
         PATTERN "*.h"
+        PATTERN "*.hpp"
         )
 
 # Layout. This works for all platforms:
